# CPP-Part2

./: .gitignore  CMake.md  README.md
alt_set1/: metadata.txt
alt_set1/1/: TODO.txt  main.cc  main.ih  order.txt
alt_set1/2/: explain.txt  main.cc  order.txt
alt_set1/3/: copy_file.cc  main.ih
alt_set1/5/: explain.txt  main.cc  namespaces.cc  namespaces.h
alt_set1/6/: main.ih
alt_set1/7/: explain.txt
set1/: metadata.txt
set1/1/: explain.txt  main.cc  main.ih  order.txt
set1/2/: order.txt
set1/3/: explain.txt  main.cc
set1/4/: explain.txt
set1/5/: order.txt
set1/6/: explain.txt  main.ih  order.txt
set1_final/: metadata.txt
set1_final/1/: explain.txt  order.txt
set1_final/2/: explain.txt  main.cc  order.txt
set1_final/3/: copy_file.cc  explain.txt  main.cc  order.txt
set1_final/4/: main.cc
set1_final/5/: explain.txt  main.cc  main.ih
set1_final/6/: main.cc  order.txt
set1_final/7/: main.cc  order.txt
set2_final/: metadata.txt
set2_final/10/: interf.h  main.ih  order.txt
set2_final/11/: explain.txt
set2_final/13/: maxfour.ih
set2_final/14/: main.cpp
set2_final/15/: dummy.h  dummy.ih  main.cc
set2_final/9/: ctor2.cc  demo.h  dtor.cc  explain.txt  order.txt
set2_prep/10/: explain.txt  handleEx.cc  main.cc  main.ih
set2_prep/11/: explain.txt  order.txt
set2_prep/13/: ctor.cc  dtor.cc  explain.txt  main.cc  maxfour.h  order.txt
set2_prep/14/: ShowExcepts.cpp  ShowExcepts.h  explain.txt  order.txt
set2_prep/15/: ctor-cp.cc  ctor.cc  dtor.cc  explain.txt  main.ih  order.txt
set2_prep/9/: main.cc  main.ih
set3_prep/: metadata.txt
set4_prep/: metadata.txt
set5_prep/: metadata.txt
set6_prep/: metadata.txt
set7_prep/: metadata.txt
set8_prep/: metadata.txt
w1/: .gitignore  FilesForSets.md  Notes.md
w1/dev/: CMakeLists.txt  main.cpp  main.ih
w1/dev/enums/: CMakeLists.txt
w1/dev/enums/inc/: msg.h
w1/dev/numbers/: CMakeLists.txt
w1/dev/numbers/inc/: numbers.h
w1/dev/numbers/include/: numbers.h
w1/dev/numbers/lib/: ctor-cp.cc  ctor-mv.cc  ctor1.cc  ctor2.cc  ctor3.cc  ctor4.cc  div_bin-r.cc  div_r.cc  insert-num.cc  mult_bin-r.cc  mult_l.cc  op_assign-cp.cc  op_assign-mv.cc  subtract_bin-l.cc  subtract_bin-r.cc  subtract_r.cc  swap.cc
w1/dev/stringsbasic/: add_l.cc  add_r.cc  icmconf  strings.h
w1/dev/tests/: CMakeLists.txt  ctor1.cc  ctor2.cc
w2/: CMakeLists.txt  TODO.txt
w2/src/: main.cc  main.ih
w2/src/ex1/: CMakeLists.txt  ctor2.cc  demo.h  dtor.cc
w2/src/ex2/: CMakeLists.txt  explain.txt
w2/src/ex3/: CMakeLists.txt  TODO.txt'  ctor-cp.cc  ctor.cc  dtor.cc  dummy.h  explain.txt
w2/src/ex5/: CMakeLists.txt  ctor.cc  dtor.cc  explain.txt
w2/swaters_dev/18/: CMakeLists.txt  Derived.h  Derived2.h  main.cpp
w2/swaters_dev/ex11/: CMakeLists.txt  Identified.cpp  Identified.h  explain.txt  main.cpp
w2/swaters_dev/ex14/: CMakeLists.txt  ShowExcepts.cpp  main.cpp
w3/: CMakeLists.txt
w3/src/: caller.cc  main.cc
w3/src/ex17/: explain.txt
w3/src/ex18/: CMakeLists.txt  derived.cc  derived.h  ex18.ih  explain.txt
w3/src/ex19/: explain.txt
w3/src/ex20/: ctor.cc  string_rep.h
w3/src/ex22/: CMakeLists.txt  base_hello.cc  explain.txt
w3/src/ex23/: mywip.h
w3/swaters/17/: explain.txt
w3/swaters/18/: Base.h  explain.txt  main.cpp
w3/swaters/19/: explain.txt
w3/swaters/20/: CMakeLists.txt  StringRepeat.h  main.cpp
w3/swaters/21/: CMakeLists.txt  String.h  explain.txt
w3/swaters/24/: CMakeLists.txt  main.cpp
w4/: CMakeLists.txt
w4/src/: freeBasePointers.cc  main.cc  main.ih
w4/src/26/: 26.ih  CMakeLists.txt  base_hello.cc  derived26.h  derived_vhello.cc
w4/src/27/: CMakeLists.txt  handler.h  handler_ctor.cc  processor.h
w4/src/29/: CMakeLists.txt  basic.h  basic_ctor.cc  basic_ctor1.cc  derived1_ctor.cc  derived2.h  explain.txt  multi.h
w4/src/30/: BiStream.h  BiStreamBuffer.h  CMakeLists.txt  bistream_ctor.cc  bistreambuffer_ctor.cc  overflow.cc
w4/src/31/: fork.ih  forkmet.cc  waitforchild.cc
w4/swaters/25/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  Message.cpp  Message.h  explain.txt  main.cpp
w4/swaters/26/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  main.cpp
w4/swaters/27/: CMakeLists.txt  Handler.cpp  Handler.h  Msg.h  Processor.cpp  Processor.h
w4/swaters/28/: CMakeLists.txt  RandBuffer.cpp  RandBuffer.h  main.cpp
w5/: CMakeLists.txt
w5/src/: main.cc  main.ih  printset.cc  scanmap.cc  scanset.cc
w5/src/35/: CMakeLists.txt  add.cc  at.cc  explain.txt  strings.cc  strings.h  strings.ih  strings1.cc  strings2.cc
w5/src/36/: CMakeLists.txt  add.cc  explain.txt  smart_str.cc  smart_str.ih
w5/swaters/33/: explain.txt  main.cpp
w5/swaters/34/: explain.txt  main.cpp
w5/swaters/37/: CMakeLists.txt  explain.txt  main.cpp  main.ih  uniqueFileWords.cc
w5/swaters/40/: CMakeLists.txt  main.cpp  order.txt
w6/: CMakeLists.txt
w6/src/: create_ind.cc  main.cc  main.ih  sort_names.cc  sort_number.cc  writeNames.cc
w6/src/41/: 41.ih  CMakeLists.txt  FillUnique.h  Random.h  data.cc  main.cc  main.ih  random.cc  range.cc  store.cc
w6/src/44/: CMakeLists.txt  ctor.cc
w6/src/47/: CMakeLists.txt  iota_wrapper.h
w7/: CMakeLists.txt
w7/src/: main.cc  main.ih
w7/src/52/: CMakeLists.txt  handler.ih
w7/src/54/: CMakeLists.txt  ctor.cc  empty.cc  front.cc  pop.cc  push.cc
w7/src/55/: CMakeLists.txt  consThr.h  consThr.ih  consumer.h  consumer.ih  ctor.cc  dtor.cc  mov-ctor.cc  poll.cc  start.cc  startThread.cc
w8/: CMakeLists.txt
w8/attempt64/: fork.cc  fork.h  main.cc
w8/attempt64/semaphore/: semaphore.ih  wait_for.cc
w8/attempt64/write_fork/: child.cc  parent.cc  write_fork.h  write_fork.ih
w8/src/: final.cc  main.cc  main.ih
w8/src/57/: CMakeLists.txt  Semaphore.h  ctor.cc  notify.cc
w8/src/63/: CMakeLists.txt  FileFinder.h  get_sources_dir_rec.cc
w8/src/CompileFlag/: CMakeLists.txt  CompileFlag.h  ctor.cc
w8/src/CompileWorker/: CMakeLists.txt  CompileWorker.h  ctor.cc  dtor.cc  start.cc  stop.cc
w8/src/attempt64/: CMakeLists.txt
w8/src/queue/: CMakeLists.txt  empty.cc
(+395 files in other folders)
